[Spring 장바구니 - 2단계] 티키(방영호) 미션 제출합니다. (#131)
* test: cart 인수 테스트 sql문 수정

* refactor: 회원삭제 커스텀 예외 수정

* feat: Cart Item jwt 활용하도록 api 변경

* feat: 외부의 mysql db 적용

* fix: mysql 의존성 추가

* feat: 주문 시스템 jwt 활용하도록 api 변경

* feat: 장바구니에 quantity 컬럼 추가

* feat: 장바구니 수량 변경하는 기능 추가

* fix: 유저 네임 중복 검증 api 변경

* feat: 상품에 대한 목록 조회를 할 때 카트에 담겨있는지에 대한 정보도 추가로 조회되도록 기능 추가

* fix: AuthenticationInterceptor 에서 Options http Method 허용하도록 변경

* test: ProductService 테스트 추가

* refactor: shoppingcart DTO 패키지 분리

* refactor: 주문 controller dto 반환하도록 수정

* feat: 장바구니에 담은 물품의 수량 제약 조건 추가

* docs: shopping 기능에 대한 구현 기능 추가

* fix: 장바구니 수량에 대한 검증이 안되던 로직 수정

* feat: 상품에 대한 목록 조회할 때, 페이징 처리할 수 있도록 dao 기능 추가

* feat: 상품에 대한 목록 조회할 때, 페이징 처리할 수 있도록 api 추가

* refactor: shoppingcart 반복 메서드 중복 제거

* refactor: Cart, OrderDetail이 Product를 가지도록 변경

* refactor: 새로운 주문을 생성하는 기능 쿼리가 덜 수행되도록 batchUpdate 활용

* refactor: 특정 주문 조회 예외 메세지 수정

* refactor: 유저가 주문했던 모든 주문 정보 목록 조회 방식 변경