@@ -1,6 +1,8 @@
 package woowacourse.shoppingcart.acceptance;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static woowacourse.fixture.PasswordFixture.plainBasicPassword;
+import static woowacourse.fixture.TokenFixture.BEARER;
 import static woowacourse.shoppingcart.acceptance.CartAcceptanceTest.장바구니_아이템_추가되어_있음;
 import static woowacourse.shoppingcart.acceptance.ProductAcceptanceTest.상품_등록되어_있음;
 
@@ -8,46 +10,63 @@ import io.restassured.RestAssured;
 import io.restassured.response.ExtractableResponse;
 import io.restassured.response.Response;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
+import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
-import woowacourse.shoppingcart.domain.Orders;
-import woowacourse.shoppingcart.dto.OrderRequest;
+import woowacourse.auth.dto.TokenRequest;
+import woowacourse.auth.dto.TokenResponse;
+import woowacourse.shoppingcart.dto.request.CustomerRequest;
+import woowacourse.shoppingcart.dto.request.OrderRequest;
+import woowacourse.shoppingcart.dto.response.OrderDetailResponse;
+import woowacourse.shoppingcart.dto.response.OrdersResponse;
 
 @DisplayName("주문 관련 기능")
 @SuppressWarnings("NonAsciiCharacters")
 public class OrderAcceptanceTest extends AcceptanceShoppingCartTest {
 
-    private static final String USER = "puterism";
+    private Long productId1;
+    private Long productId2;
+    private Long productId3;
     private Long cartId1;
     private Long cartId2;
+    private Long cartId3;
+    private String accessToken;
 
     @Override
     @BeforeEach
     public void setUp() {
         super.setUp();
 
-        Long productId1 = 상품_등록되어_있음("치킨", 10_000, "http://example.com/chicken.jpg");
-        Long productId2 = 상품_등록되어_있음("맥주", 20_000, "http://example.com/beer.jpg");
+        productId1 = 상품_등록되어_있음("치킨", 10_000, "http://example.com/chicken.jpg");
+        productId2 = 상품_등록되어_있음("맥주", 20_000, "http://example.com/beer.jpg");
+        productId3 = 상품_등록되어_있음("피자", 25_000, "http://example.com/pizza.jpg");
 
-        cartId1 = 장바구니_아이템_추가되어_있음(USER, productId1);
-        cartId2 = 장바구니_아이템_추가되어_있음(USER, productId2);
+        CustomerRequest signUpRequest = new CustomerRequest("giron", plainBasicPassword);
+        회원가입_요청(signUpRequest);
+
+        TokenRequest tokenRequest = new TokenRequest("giron", plainBasicPassword);
+        TokenResponse tokenResponse = 로그인_요청_토큰_생성됨(tokenRequest);
+        accessToken = tokenResponse.getAccessToken();
+
+        cartId1 = 장바구니_아이템_추가되어_있음(accessToken, productId1);
+        cartId2 = 장바구니_아이템_추가되어_있음(accessToken, productId2);
+        cartId3 = 장바구니_아이템_추가되어_있음(accessToken, productId3);
     }
 
     @DisplayName("주문하기")
     @Test
     void addOrder() {
         List<OrderRequest> orderRequests = Stream.of(cartId1, cartId2)
-                .map(cartId -> new OrderRequest(cartId, 10))
+                .map(cartId -> new OrderRequest(cartId, 1))
                 .collect(Collectors.toList());
 
-        ExtractableResponse<Response> response = 주문하기_요청(USER, orderRequests);
+        ExtractableResponse<Response> response = 주문하기_요청(accessToken, orderRequests);
 
         주문하기_성공함(response);
     }
@@ -55,53 +74,58 @@ public class OrderAcceptanceTest extends AcceptanceShoppingCartTest {
     @DisplayName("주문 내역 조회")
     @Test
     void getOrders() {
-        Long orderId1 = 주문하기_요청_성공되어_있음(USER, Collections.singletonList(new OrderRequest(cartId1, 2)));
-        Long orderId2 = 주문하기_요청_성공되어_있음(USER, Collections.singletonList(new OrderRequest(cartId2, 5)));
+        final List<OrderRequest> orderRequests = List.of(new OrderRequest(cartId1, 1), new OrderRequest(cartId2, 1));
+        Long orderId1 = 주문하기_요청_성공되어_있음(accessToken, orderRequests);
+        Long orderId2 = 주문하기_요청_성공되어_있음(accessToken, List.of(new OrderRequest(cartId3, 1)));
 
-        ExtractableResponse<Response> response = 주문_내역_조회_요청(USER);
+        ExtractableResponse<Response> response = 주문_내역_조회_요청(accessToken);
 
         주문_조회_응답됨(response);
         주문_내역_포함됨(response, orderId1, orderId2);
+        주문_내역에_상품이_맞게_포함됨(response, productId1, productId2, productId3);
     }
 
     @DisplayName("주문 단일 조회")
     @Test
     void getOrder() {
-        Long orderId = 주문하기_요청_성공되어_있음(USER, Arrays.asList(
-                new OrderRequest(cartId1, 2),
-                new OrderRequest(cartId2, 4)
+        Long orderId = 주문하기_요청_성공되어_있음(accessToken, Arrays.asList(
+                new OrderRequest(cartId1, 1),
+                new OrderRequest(cartId2, 1)
         ));
 
-        ExtractableResponse<Response> response = 주문_단일_조회_요청(USER, orderId);
+        ExtractableResponse<Response> response = 주문_단일_조회_요청(accessToken, orderId);
 
         주문_조회_응답됨(response);
         주문_조회됨(response, orderId);
     }
 
-    public static ExtractableResponse<Response> 주문하기_요청(String userName, List<OrderRequest> orderRequests) {
+    public static ExtractableResponse<Response> 주문하기_요청(String token, List<OrderRequest> orderRequests) {
         return RestAssured
                 .given().log().all()
                 .contentType(MediaType.APPLICATION_JSON_VALUE)
+                .header(HttpHeaders.AUTHORIZATION, BEARER + token)
                 .body(orderRequests)
-                .when().post("/api/customers/{customerName}/orders", userName)
+                .when().post("/api/customers/me/orders")
                 .then().log().all()
                 .extract();
     }
 
-    public static ExtractableResponse<Response> 주문_내역_조회_요청(String userName) {
+    public static ExtractableResponse<Response> 주문_내역_조회_요청(String token) {
         return RestAssured
                 .given().log().all()
                 .contentType(MediaType.APPLICATION_JSON_VALUE)
-                .when().get("/api/customers/{customerName}/orders", userName)
+                .header(HttpHeaders.AUTHORIZATION, BEARER + token)
+                .when().get("/api/customers/me/orders")
                 .then().log().all()
                 .extract();
     }
 
-    public static ExtractableResponse<Response> 주문_단일_조회_요청(String userName, Long orderId) {
+    public static ExtractableResponse<Response> 주문_단일_조회_요청(String token, Long orderId) {
         return RestAssured
                 .given().log().all()
                 .contentType(MediaType.APPLICATION_JSON_VALUE)
-                .when().get("/api/customers/{customerName}/orders/{orderId}", userName, orderId)
+                .header(HttpHeaders.AUTHORIZATION, BEARER + token)
+                .when().get("/api/customers/me/orders/{orderId}", orderId)
                 .then().log().all()
                 .extract();
     }
@@ -111,8 +135,8 @@ public class OrderAcceptanceTest extends AcceptanceShoppingCartTest {
         assertThat(response.header("Location")).isNotBlank();
     }
 
-    public static Long 주문하기_요청_성공되어_있음(String userName, List<OrderRequest> orderRequests) {
-        ExtractableResponse<Response> response = 주문하기_요청(userName, orderRequests);
+    public static Long 주문하기_요청_성공되어_있음(String token, List<OrderRequest> orderRequests) {
+        ExtractableResponse<Response> response = 주문하기_요청(token, orderRequests);
         return Long.parseLong(response.header("Location").split("/orders/")[1]);
     }
 
@@ -121,14 +145,26 @@ public class OrderAcceptanceTest extends AcceptanceShoppingCartTest {
     }
 
     public static void 주문_내역_포함됨(ExtractableResponse<Response> response, Long... orderIds) {
-        List<Long> resultOrderIds = response.jsonPath().getList(".", Orders.class).stream()
-                .map(Orders::getId)
+        List<Long> resultOrderIds = response.jsonPath().getList(".", OrdersResponse.class).stream()
+                .map(OrdersResponse::getId)
                 .collect(Collectors.toList());
         assertThat(resultOrderIds).contains(orderIds);
     }
 
+    public static void 주문_내역에_상품이_맞게_포함됨(ExtractableResponse<Response> response, Long... expectedProductIds) {
+        final List<OrderDetailResponse> orderDetailResponses = response.jsonPath().getList(".", OrdersResponse.class)
+                .stream()
+                .map(OrdersResponse::getOrderDetails)
+                .flatMap(List::stream)
+                .collect(Collectors.toList());
+        final List<Long> productIds = orderDetailResponses.stream()
+                .map(OrderDetailResponse::getProductId)
+                .collect(Collectors.toList());
+        assertThat(productIds).contains(expectedProductIds);
+    }
+
     private void 주문_조회됨(ExtractableResponse<Response> response, Long orderId) {
-        Orders resultOrder = response.as(Orders.class);
-        assertThat(resultOrder.getId()).isEqualTo(orderId);
+        OrdersResponse ordersResponse = response.as(OrdersResponse.class);
+        assertThat(ordersResponse.getId()).isEqualTo(orderId);
     }
 }
